--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	  <title>Welcome to Worldclass  DevOps Workshop </title>
+	  <title>Welcome to Venkat Worldclass  DevOps Workshop </title>
 	   
   </head>
   <body bgcolor=white>
@@ -11,11 +11,11 @@
           <img src="images/test.jpg">
         </td>
         <td>
-          <h1>Hello Worldclass DevOps Engineers and Architects!</h1>
+          <h1>Hello Worldclass Venkat DevOps Engineers and Architects!</h1>
         </td>
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup git-github </p>
+    <p>This session is to Venkat demonstrate how to setup git-github </p>
   </body>
 </html>
