--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	  <title>Welcome to Venkat Worldclass  DevOps Workshop </title>
+	  <title>Welcome to Venkat World DevOps Workshop </title>
 	   
   </head>
   <body bgcolor=white>
