updated index.html file

--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -16,6 +16,6 @@
       </tr>
     </table>
 
-    <p>This session is to Venkat demonstrate how to setup git-github </p>
+    <p>This session is for devops Venkat demonstrate how to setup git-github </p>
   </body>
 </html>
