--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -11,11 +11,11 @@
           <img src="images/test.jpg">
         </td>
         <td>
-          <h1>Hello Worldclass Venkat DevOps Engineers and Architects!</h1>
+          <h1>Hello World class Venkat DevOps Engineers and Architects!</h1>
         </td>
       </tr>
     </table>
 
-    <p>This session is for devops Venkat demonstrate how to setup git-github </p>
+    <p>This session is for Venkat devops demonstrate how to setup git-github </p>
   </body>
 </html>
